# python-image-gallery

./: Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
src/python_image_gallery/: main.py
