[tool.poetry]
name = "Python Image Gallery"
version = "0.1.0"
description = ""
authors = ["Nicolai Csott <nicolaicsott@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.2"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"
mypy = "^1.13.0"
bandit = "^1.7.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
